--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ li.nav-item {
 }
 
 .banner-gradient-wrapper h1 {
-    font-size: 5rem;
+    /* font-size: 5rem; */
     font-weight: bold;
     margin-bottom: 2.5rem;
 }
